Fix : Fix change font mr

--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -90,12 +90,8 @@
     line-height: var(--line-height-small);
   }
 }
-<<<<<<< HEAD
 
-@media screen and (max-width: 30rem) {
-=======
-@media screen and (max-width: 30em) {
->>>>>>> parent of 72f8b88 (PERF: Optimized formatting and spacing .)
+@media screen and (max-width: 480px) {
   /* < 480px */
   .font--large {
     font-size: var(--font-size-x-large);
