--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -4,7 +4,7 @@
   line-height: var(--line-height-small);
 }
 
-.font--medium {
+.navbar-text {
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-medium);
