--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -31,6 +31,7 @@
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-xx-medium);
   line-height: var(--line-height-large);
+  color: var(--black);
 }
 
 .card-footer {
