Fix : Fix css card-tex into card-title

--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -77,7 +77,7 @@
     font-size: var(--font-size-base);
     line-height: var(--line-height-small);
   }
-  .card-text {
+  .card-title {
     font-size: var(--font-size-x-medium);
     line-height: var(--line-height-x-medium);
   }
