--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -1,21 +1,3 @@
-.font--small {
-  font-size: var(--font-size-small);
-  font-weight: var(--font-weight-medium);
-  line-height: var(--line-height-small);
-}
-
-.nav-text {
-  font-size: var(--font-size-medium);
-  font-weight: var(--font-weight-medium);
-  line-height: var(--line-height-medium);
-}
-
-.heading-lg {
-  font-size: var(--font-size-xxx-large);
-  font-weight: var(--font-weight-bold);
-  line-height: var(--line-height-xxx-large);
-}
-
 /* Card */
 
 .card-header {
@@ -27,7 +9,7 @@
   text-transform: uppercase;
 }
 
-.card-text {
+.card-title {
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-xx-medium);
   line-height: var(--line-height-large);
@@ -38,6 +20,26 @@
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-small);
 }
+
+.heading-sm {
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--line-height-small);
+}
+
+.nav-text,
+.heading-md {
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--line-height-medium);
+}
+
+.heading-lg {
+  font-size: var(--font-size-xxx-large);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-xxx-large);
+}
+
 
 /* font */
 
