--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -229,8 +229,9 @@ a {
 
 /* header-carousel */
 .header-carousel {
-  padding-top: 70px;
-  width: 60%;
+  margin-top: 50px;
+  margin-bottom: 2rem;
+  width: 100%;
 }
 
 .header-carousel .heading-lg {
@@ -663,9 +664,9 @@ a {
     margin-left : 1rem;
     width: max-content;
   }
-
-  .shape {
-    display: inline;
+  /* __carousel */
+  .header-carousel {
+    margin: 6.25rem 0;
   }
 
   .nav-tabs .item {
