--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -673,11 +673,11 @@ a {
 
 /*Iphone(480 x 640)*/
 @media screen and (min-width: 320px){
-    
+
 }
 /*Tablet nhỏ(480 x 640)*/
 @media screen and (min-width: 480px){
-    
+
 }
 /*Ipad dọc(768 x 1024)*/
 @media screen and (min-width: 768px){
@@ -689,7 +689,7 @@ a {
   .header .container {
     padding-bottom: 0;
   }
-  /* __navbar */
+  /* -navbar */
   .header-navbar {
     display: flex;
     justify-content: space-between;
