--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -22,7 +22,7 @@ a {
   max-width: 1440px;
   /* change : width: 8 */
   margin: auto;
-  padding: 1.625rem 1.5rem;
+  padding: 0 1.5rem;
 }
 .container-fluid {
   padding-left: 0;
@@ -165,6 +165,13 @@ a {
   background: var(--lighthouse);
 }
 
+.header .container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  margin-bottom: 4.5rem;
+}
+
 /* header-navbar */
   /*@Hover::before */
 .header-navbar .nav-menu .item::before {
@@ -278,10 +285,6 @@ a {
   padding: unset;
 }
 
-.header .container {
-  padding-bottom: 1.5rem;
-}
-
 .header-tab .nav-tabs {
   width: 100%;
   margin: auto;
@@ -331,14 +334,14 @@ a {
 }
 
 .service .container {
-  margin-top: 120px;
-  display: flex;
-  justify-content: space-between;
+  /* margin-top: 120px; */
+  /* display: flex; */
+  /* justify-content: space-between; */
 }
 
 .service-left,
 .service-right {
-  width: 50%;
+  width: 100%;
 }
 
 /* service-left */
@@ -747,6 +750,10 @@ a {
   .container {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+
+  .header .container {
+    padding-top: 2rem ;
   }
 }
 
